--- a/clase11/actividad fetch/css/style.css
+++ b/clase11/actividad fetch/css/style.css
@@ -1,8 +1,19 @@
 .characterList{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 article{
     border: 1px solid grey;
     margin: 10px;
+    padding: 5px;
+}
+.nombre{
+    display: block;
+}
+.search-results{ 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
 }
